--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,13 +26,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/portfolio/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: share0n
+github_username:  arontaupe
 
 # Build settings
 #theme: minima
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes"
 plugins:
+  jekyll-include-cache
 #  - jekyll-feed
 
 # Exclude from processing.
