--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,13 +25,13 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/portfolio/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 #theme: minima
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
-  jekyll-include-cache
+  - jekyll-include-cache
 #  - jekyll-feed
 
 # Exclude from processing.
