--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: My Portfolio
-email: aron@petau.de
-description: >- # this means to ignore newlines until "baseurl:"
+#email: aron@petau.de
+#description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/portfolio/" # the subpath of your site, e.g. /blog
+#baseurl: "/portfolio/" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
@@ -32,6 +32,7 @@ baseurl: "/portfolio/" # the subpath of your site, e.g. /blog
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-include-cache
+  - github-pages
 #  - jekyll-feed
 
 # Exclude from processing.
