--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@ title                    : "Portfolio"
 title_separator          : "-"
 subtitle                 : "Draft Version" # site tagline that appears below site title in masthead
 name                     : "Aron Petau"
-description              : "An amazing website."
+description              : "Here I display a selection of my recent work"
 url                      : "https://arontaupe.github.io"
 baseurl                  : "/portfolio"
 repository               : arontaupe/portfolio
@@ -117,10 +117,10 @@ author:
        url: "https://reprinted.xyz"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://twitter.com/schar0n"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/arontaupe"
 
 # Site Footer
 footer:
@@ -165,8 +165,8 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
+  #- /docs # ignore Minimal Mistakes /docs
+  #- /test # ignore Minimal Mistakes /test
 keep_files:
   - .git
   - .svn
@@ -202,7 +202,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 6 # amount of posts to show
 paginate_path: /page:num/
 timezone: Europe/Berlin # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
