--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
-  - github-pages
+  #- github-pages
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -223,7 +223,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
-  - github-pages
+  #- github-pages
 
 
 # Archives
