--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,8 @@ title_separator          : "-"
 subtitle                 : "Draft Version" # site tagline that appears below site title in masthead
 name                     : "Aron Petau"
 description              : "Here I display a selection of my recent work"
-#url                      : "https://arontaupe.github.io"
-#baseurl                  : "/portfolio"
+url                      : "https://arontaupe.github.io"
+baseurl                  : "/portfolio"
 repository               : arontaupe/portfolio
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
