--- a/_config.yml
+++ b/_config.yml
@@ -93,11 +93,11 @@ analytics:
 # Site Author
 author:
   name             : "Aron Petau"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/img/aron_avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Germany"
   email            : aron@petau.net
-  
+
 # Site Footer
 footer:
   links:
