--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,5 +13,5 @@ main:
     url: /page-archive/
   - title: "Collections"
     url: /collection-archive/
-  - title: "External Link"
-    url: https://google.com
+  - title: "3D Printing"
+    url: /3dprinting/
