--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,12 +24,14 @@ main:
     url: /docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Sample Posts"
-    url: /year-archive/
+  - title: "Portfolio"
+    url: /portfolio/
   - title: "Sample Collections"
     url: /collection-archive/
-  - title: "Terms &amp; Privacy Policy"
-    url: /terms/
+  - title: "Posts"
+    url: /posts/
+  - title: "Privacy Policy"
+    url: /privacy/
 
 
 # documentation links
