--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,16 +20,14 @@ foo:
 
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
   - title: "About"
     url: /about/
   - title: "Portfolio"
     url: /portfolio/
-  - title: "Sample Collections"
-    url: /collection-archive/
-  - title: "Posts"
-    url: /posts/
+  - title: "Motivation"
+    url: /motivation/
+  - title: "Experience"
+    url: /cv/
   - title: "Privacy Policy"
     url: /privacy/
 
