--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@
 Aron Petau:
   name        : "Aron Petau"
   bio         : "Cognitve Scientist, 3D Modeling and Design"
-  avatar      : "/assets/img/aron_avatar.jpg"
+  avatar      : "/assets/aron_avatar.jpg"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
