--- a/_config.yml
+++ b/_config.yml
@@ -229,6 +229,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-picture-tag
 
 
 # mimic GitHub Pages with --safe
@@ -238,6 +239,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-picture-tag
 
 
 # Archives
