--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url                      : https://arontaupe.github.io
 baseurl                  : "/portfolio"
 repository               : "arontaupe/portfolio"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "assets/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "Aron Petau" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -89,7 +89,7 @@ analytics:
 # Site Author
 author:
   name             : "Aron Petau"
-  avatar           : "/assets/aron_avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/aron_avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Cognitive Scientist, Programmer, 3D Modeler"
   location         : "Osnabrück, Germany"
   email            : aron@petau.net
