--- a/_config.yml
+++ b/_config.yml
@@ -229,7 +229,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
-  - jekyll-picture-tag
+  - jekyll_picture_tag
 
 
 # mimic GitHub Pages with --safe
@@ -239,7 +239,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
-  - jekyll-picture-tag
+  - jekyll_picture_tag
 
 
 # Archives
